src/assets/App.css
/* ... */
    /*#header:hover {
      transform: scale(1.02);
    }*/
    #explore, #logo {
      margin: 0 auto;
      display: inline-block;
      overflow: hidden;
    	flex: 1 1 auto;
    	text-align: center;
    }
    #explore {
    	color: #dddddd;
    	letter-spacing: 8px;
      width: 25%;
      margin: 0 auto;
    }
    #exploreFormHeader{
      overflow: hidden;
      padding: 0px;
      margin: 0 auto;
      text-align: center;
      color: #dddddd;
      letter-spacing: 8px;
      font-size: 100%;
      margin-top: 2px;
      }
    #exploreInput {
    	color: #dddddd;
    	background-color: #0f131c;
    	border: 1px solid #dddddd;
    	height: 35px;
    	width: 80%;
    	letter-spacing: 6px;
    	font-size: 120%;
    	padding: auto;
      font-family: 'Alegreya Sans SC', sans-serif;
    	text-align: center;
    }
    #exploreHeaderInput {
      color: #dddddd;
    	background-color: #0f131c;
    	border: 1px solid #dddddd;
    	height: 35px;
    	width: 200px;
    	letter-spacing: 6px;
    	font-size: 80%;
    	font-family: 'Raleway', sans-serif;
    	text-align: center;
      margin: 0 auto;
    }
    #submitExplore {
    	display: none;
    }
    #logo {
    	font-size: 200%;
    	font-weight: 100;
    	letter-spacing: 16px;
    	flex: 1 2 auto;
/*Changing the width to 100% gets rid of gap on right
 but shrinking screen messes up avatar*/
      width: 50%;
    }
    #logoName {
      margin: 0 auto;
      float: left;
      margin-left: 5%;
      transition: all 0.5s ease 0s;
      transform: scale(1);
      color: #ffffff;
    }
    /*#logoName:active {
      transform: scale(1.02);
      color: #00dcff;
      cursor: pointer;
    }*/
    #avatarHeader {
      flex: 1 1 auto;
      text-align: center;
      /*text-align: right;*/

      margin: 0 auto;
      display: inline-block;
      overflow: hidden;
    	text-align: center;
    }
    #avatarImage {
      /*display: block;*/
      border: 1px solid #00dcff;
    	border-radius: 50%;
      margin: 0 auto;
      /*vertical-align: middle;*/
      /*float: right;*/
    }
    #avatarFullName {
      margin: 0 auto;
      margin-right: 3%;
      font-size: 200%;
      color: #dddddd;
      letter-spacing: 8px;
    	overflow: hidden;
    	width: 100%;
    	display: -webkit-box;
    	display: -moz-box;
    	display: -ms-flexbox;
    	display: -webkit-flex;
    	display: inline-flex;
    	flex-direction: row;
    	justify-content: space-between;
    	flex-wrap: nowrap;
    	align-items: strech;
      text-align: right;
      float: right;
      transition: all 0.5s ease 0s;
      transform: scale(1);
      color: #ffffff;
    }
    /*#avatarFullName:hover {
      transform: scale(1.02);
      color: #00dcff;
      cursor: pointer;
    }*/
    #headerName {
      display: inline;
      flex: 2 2 auto;
    }
    #imgContainerAvatar {
      flex: 1 1 auto;
    }

/*End Header*/



/*Login*/

    #loginContainer {
    	display: -webkit-box;
    	display: -moz-box;
    	display: -ms-flexbox;
    	display: -webkit-flex;
    	overflow: hidden;
    	display: inline-flex;
    	align-items: stretch;
    	flex-direction: row;
    	width:99.99%;
    	border: 1px solid #00dcff;
    	border-width: 0px 0px;
    	min-height: 99.99%;
    }
    #info {
      color: #dddddd;
    	padding: 30px 10px 20px 0px;
    	flex: 1 1 auto;
    	width: 60%;
      padding: 0px;
    }
    #signup, #register {
    	color: #dddddd;
    	padding: 20px 10px 20px 0px;
    	flex: 1 1 auto;
    	width: 60%;
    	width: 100%;
      font-size: 90%;
      margin: 0 auto;
      margin-top: 0%;
      margin-bottom: 0%;
    }
    #register {
      /*margin-top: 1%;
      margin-bottom: 2%;*/
    }
    #banner {
    	color: #ffffff;
    	width: 100%;
    	letter-spacing: .15em;
    	font-size: 200%;
    	text-align: center;
    	padding: 0px 0px 5px 0px;
      margin-top: 11.5%;
    }
    #bannerTitle {
    	font-size: 250%;
    	letter-spacing: 16px;
    	border: 1px solid #00dcff;
    	border-width: 2px 0px;
      text-align: center;
      margin: 0 auto;
      box-shadow: 0 0 2pt 2pt rgba(0,220,255,0.5);
      background-color: rgba(0, 220, 255, 0.05);
    }
    #bannerSlogan {
      padding: 3px;
      border: 1px solid #00dcff;
    	border-width: 2px 0px;
      letter-spacing: 12px;
      /*color: #00dcff;*/
      background-color: rgba(0, 220, 255, 0.05);
      box-shadow: 0 0 1pt 1pt rgba(0,220,255,0.5);
      width: 60%;
      margin: 0 auto;
      margin-top: 12px;
    }
    #learnMore {
    	color: #00dcff;
    	padding: -10% 10% 0% 10%;
    	font-size: 120%;
    }
    #introduction {
    	text-align: center;
    	font-size: 120%;
    	line-height: 150%;
    	letter-spacing: 3px;
      color: #ffffff;
      padding-left: 15px;
    }
    #introduction {
    	margin: 0% 10%;
    }
    #loginForm, #registerForm {
    	border: 1px solid #00dcff;
    	border-width: 1px 1px 1px 1px;
    	border-radius: 3px;
    	text-align: center;
      width: 40%;
      margin: 0 auto;
    }
    #loginEmail, #registerFullName,
    #loginPassword, #registerPassword,
    #registerUserName, #registerEmail {
    	display: block;
      margin-top: 15px;
      font-size: 75%;
      width: 22%;
      margin-bottom: 0px;
      box-shadow: 0 0 2pt 2pt rgba(0,220,255,0.5);
      font-family: 'Alegreya Sans SC', sans-serif;
    }
    #loginPassword, #registerPassword {
      margin-bottom: 15px;
      /*width: 22%;*/
    }
    /*#registerEmail {
      width: 18%;
    }
    #registerUserName {
      width: 20%;
    }*/
    #enter {
    	color: #00dcff;
    	font-size: 100%;
    	border: 1px solid #00dcff;
    	border-width: 0px 0px 1px 0px;
    	margin-bottom: 0px;
    }
/* ... */

